--- a/PIAOnlineForm/additional-file/css/agreement.css
+++ b/PIAOnlineForm/additional-file/css/agreement.css
@@ -1,5 +1,6 @@
 ﻿.bg {
     background-image: url('../img/dark-blue-evening-rl-1366x768.jpg');
+    background-repeat: repeat-y;
     background-size: cover;
     height: 100vh;
 }
