--- a/PIAOnlineForm/additional-file/css/mainpage.css
+++ b/PIAOnlineForm/additional-file/css/mainpage.css
@@ -1,13 +1,13 @@
 ﻿.bg {
     background-image: url('../img/5044328.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     height: 100vh;
 }
 
 .container-form {
     border: 1px solid #ffffff;
-    margin-top: 2vh;
+    margin-top: 35vh;
     padding: 30px 40px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 70px -9px rgba(255,255,255,1);
