--- a/PIAOnlineForm/additional-file/css/regist.css
+++ b/PIAOnlineForm/additional-file/css/regist.css
@@ -1,6 +1,8 @@
 ﻿.bg {
     background-image: url('../img/5044328.jpg');
     background-repeat: repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
 .container-form {
