--- a/PIAOnlineForm/additional-file/css/mainform.css
+++ b/PIAOnlineForm/additional-file/css/mainform.css
@@ -1,8 +1,6 @@
 ﻿.bg {
-    background-image: url('../img/5044328.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+    background-image: url('../img/simple-1655089829591-3169.jpg');
+    background-repeat: repeat;
 }
 
 .container-form {
