--- a/PIAOnlineForm/additional-file/css/mainpage.css
+++ b/PIAOnlineForm/additional-file/css/mainpage.css
@@ -1,5 +1,5 @@
 ﻿.bg {
-    background-image: url('../img/5044328.jpg');
+    background-image: url('../img/simple-1655089829591-3169.jpg');
     background-repeat: repeat;
     background-size: cover;
     height: 100vh;
