--- a/PIAOnlineForm/additional-file/css/regist.css
+++ b/PIAOnlineForm/additional-file/css/regist.css
@@ -1,13 +1,11 @@
 ﻿.bg {
-    background-image: url('../img/5044328.jpg');
+    background-image: url('../img/simple-1655089829591-3169.jpg');
     background-repeat: repeat;
-    background-size: cover;
-    height: 100vh;
 }
 
 .container-form {
     border: 1px solid #ffffff;
-    margin-top: 14vh;
+    margin-top: 3vh;
     padding: 30px 40px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 70px -9px rgba(255,255,255,1);
