even when the night changes

--- a/PIAOnlineForm/additional-file/css/global.css
+++ b/PIAOnlineForm/additional-file/css/global.css
@@ -1,5 +1,5 @@
 ﻿.bg {
-    background-image: url('../img/abstract-pastel-blue-paint-brushstroke-textured-background.jpg');
+    background-image: url('../img/Untitled40_20220628100742.jpeg');
     background-repeat: repeat;
     background-size: cover;
     height: 100vh;
@@ -7,6 +7,7 @@
 
 h2 {
     color: #FF6699;
+    font: bold 12 px;
 }
 
 label {
@@ -15,7 +16,7 @@ label {
 
 .container-form {
     border: 1px solid #ffffff;
-    margin-top: 27vh;
+    margin-top: 17vh;
     padding: 30px 40px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 70px -9px rgba(255,255,255,1);
