--- a/PIAOnlineForm/additional-file/css/agreement.css
+++ b/PIAOnlineForm/additional-file/css/agreement.css
@@ -2,20 +2,20 @@
     background-image: url('../img/abstract-pastel-blue-paint-brushstroke-textured-background.jpg');
     background-repeat: repeat;
     background-size: cover;
-    height: 100vh;
+    height: 125vh;
 }
 
 h2 {
-    color: #FF6699;
+    color: #90639E;
 }
 
 label {
-    color: #FF6699;
+    color: #90639E;
 }
 
 .container-form {
     border: 1px solid #ffffff;
-    margin-top: 13vh;
+    margin-top: 2vh;
     padding: 30px 40px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 70px -9px rgba(255,255,255,1);
