--- a/PIAOnlineForm/additional-file/css/mainpage.css
+++ b/PIAOnlineForm/additional-file/css/mainpage.css
@@ -1,21 +1,21 @@
 ﻿.bg {
-    background-image: url('../img/abstract-pastel-blue-paint-brushstroke-textured-background.jpg');
+    background-image: url('../img/Untitled45_20220704155154.jpg');
     background-repeat: repeat;
     background-size: cover;
-    height: 100vh;
+    height: 130vh;
 }
 
 h2 {
-    color: #FF6699;
+    color: #90639E;
 }
 
 label {
-    color: #FF6699;
+    color: #90639E;
 }
 
 .container-form {
     border: 1px solid #ffffff;
-    margin-top: 35vh;
+    margin-top: 47vh;
     padding: 30px 40px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 70px -9px rgba(255,255,255,1);
