--- a/PIAOnlineForm/additional-file/css/regist.css
+++ b/PIAOnlineForm/additional-file/css/regist.css
@@ -6,11 +6,11 @@
 }
 
 h2 {
-    color: #FF6699;
+    color: #90639E;
 }
 
 label {
-    color: #FF6699;
+    color: #90639E;
 }
 
 .container-form {
